# template-rust-simple-server

./: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  buildbuddy.yaml
server/: BUILD.bazel  main.rs
src/: main.rs
