load("@rules_rust//rust:defs.bzl", "rust_binary")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "hello_world",
    srcs = ["src/main.rs"],
)

load("@io_bazel_rules_docker//rust:image.bzl", "rust_image")

rust_image(
    name = "hello_world_image",
    srcs = ["src/main.rs"],
)